# ev3dev-cpp-template-wrapper

./: .gitattributes  .gitignore  CMakeLists.imgonnarewrite  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  docStructure.yml
.github/workflows/: compile-test-actions.yml  docs-updater.yml
docker/: Dockerfile
docs/: README.md  README.rst  _config.yml  contributing.md  disabledconfig.yml  documentation.md  ev3_tutorial_1.md  index.md  quickstartTutorials.md
docs/assets/css/: style.scss
docs/contributing/: branchNamingRules.md  contributing.md  libraryStructure.md  writingDocumentation.md
docs/contributing/libraryStructure/: CMakeExamples.md  CMakeSpecifics.md
docs/documentation/: BlockableDocumentation.md  ButtonDocumentation.md  ColorSensorDocumentation.md  CompassSensorDocumentation.md  GyroDocumentation.md  IrSeekerDocumentation.md  MotorPairDocumentation.md  OmniDocumentation.md  TouchSensorDocumentation.md  UltrasonicSensorDocumentation.md  UtilitiesDocumentation.md  VectorDocumentation.md  bluetooth-socket.md  documentation.md  motorDocumentation.md
docs/quickStartTutorials/: MotorPairTutorial.md  MotorTutorial.md  irseekerQuickstartTutorial.md  quickstartTutorial_1.md  quickstartTutorials.md  speedingUpBinding.md  troubleshooting.md
examples/: CMakeLists.txt
examples/compass_calibration/: CMakeLists.txt  compass_calibration.cpp
examples/ir_source_facer/: CMakeLists.txt  ir_source_facer.cpp
examples/move_until_distance/: CMakeLists.txt  move_until_distance.cpp
examples/press_n_spin/: CMakeLists.txt  press_n_spin.cpp
examples/spin_a_motor/: CMakeLists.txt  spin_a_motor.cpp
lib/: ev3dev.cpp  ev3dev.h  ev3wrap.cpp  ev3wrap.hpp  smbus.cpp  smbus.h
lib/bbr-irseeker/: bbr-irseeker.cpp  bbr-irseeker.hpp
lib/blockable/: blockable.hpp  ev3wrapblockable.cpp  ev3wrapblockable.hpp
lib/bluetooth-socket/: bluetooth-socket.cpp  bluetooth-socket.hpp
lib/button/: button.cpp  button.hpp  ev3wrapbutton.cpp  ev3wrapbutton.hpp
lib/color/: ev3wrapcolor.cpp  ev3wrapcolor.hpp
lib/color-sensor/: color-sensor.hpp
lib/compass/: ev3wrapcompass.cpp  ev3wrapcompass.hpp
lib/gyro/: ev3wrapgyro.cpp  ev3wrapgyro.hpp
lib/gyro-sensor/: gyro.hpp
lib/hitechnic-compass/: hitechnic-compass.cpp  hitechnic-compass.hpp
lib/hitechnic-irseeker/: hitechnic-irseeker.cpp  hitechnic-irseeker.hpp
lib/irseeker/: ev3wrapirseeker.cpp  ev3wrapirseeker.hpp
lib/lcd/: ev3wraplcd.cpp  ev3wraplcd.hpp
lib/lego-port/: lego-port.cpp  lego-port.hpp
lib/motor/: ev3wrapmotor.cpp  ev3wrapmotor.hpp  motor.cpp  motor.hpp
lib/motorpair/: ev3wrapmotorpair.cpp  ev3wrapmotorpair.hpp
lib/omni/: omni.cpp  omni.hpp
lib/omnirobot/: ev3wrapomnirobot.cpp  ev3wrapomnirobot.hpp
lib/touch/: ev3wraptouch.cpp  ev3wraptouch.hpp
lib/ultrasonic/: ev3wrapultrasonic.cpp  ev3wrapultrasonic.hpp
lib/ultrasonic-sensor/: ultrasonic-sensor.hpp
lib/utilities/: ev3wraputilities.hpp  utilities.hpp
lib/vector/: ev3wrapvector.cpp  ev3wrapvector.hpp  vector.cpp  vector.hpp
scripts/: compile.sh  dockersetup.sh  example_post_build.sh  post_build.sh  runWithinContainer.sh
src/: main.cpp
